slice 테스트 예시 구현